--- a/_posts/jp/2023-09-21-20230921-jp.md
+++ b/_posts/jp/2023-09-21-20230921-jp.md
@@ -6,15 +6,15 @@ categories: Japanese
 ---
 
 #### たわいもない
-` たわいもないは「取るに足らない」という意味の言葉です。取り上げるほど価値や重要度がなく「たいしたことがない」という意味があります。`
+> たわいもないは「取るに足らない」という意味の言葉です。取り上げるほど価値や重要度がなく「たいしたことがない」という意味があります。
 
 ---
 
 #### 取るに足らない
-` 하잘것 없다. 하찮다. 시시하다 `
+> 하잘것 없다. 하찮다. 시시하다 
 
 ---
 
 #### 取り上げるほどのことではない
-` 取るに足らない 랑 같은 의미 `
+> 取るに足らない 랑 같은 의미
 
